--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,6 @@
 services:
   groupoffice:
-    image: intermesh/groupoffice:master
+    image: intermesh/groupoffice:latest
     restart: always
     ports:
       - "9000:80"
@@ -11,7 +11,8 @@ services:
       - "goetc:/etc/groupoffice:cached"
 #      - "gostudio:/usr/local/share/groupoffice/go/modules/studio:cached"
       - ./src/studio:/usr/local/share/groupoffice/go/modules/studio
-
+    networks:
+      - nginx-proxy-network
 
     #      Example for ssl
 #      - "./config/ssl/groupoffice:/etc/ssl/groupoffice"
@@ -28,8 +29,14 @@ services:
       MARIADB_AUTO_UPGRADE: 1
     volumes:
       - "dbdata:/var/lib/mysql:cached"
+    networks:
+      - nginx-proxy-network
 volumes:
   godata:
   goetc:
   #gostudio:
   dbdata:
+
+networks:
+  nginx-proxy-network:
+    external: true
